add_subdirectory(02_decisions)
add_subdirectory(02_decisions_test)
add_subdirectory(03_iteration)
add_subdirectory(03_iteration_test)
add_subdirectory(04_vectors)
add_subdirectory(04_vectors_test)
add_subdirectory(tic_tac_toe)
add_subdirectory(tic_tac_toe_test)
add_subdirectory(tic_tac_toe_gui)